# CNTK

./: .clang-format  .cproject  .editorconfig  .gitattributes  .gitignore  .gitmodules  .project  0)  1  AUTO-MERGE-TEST.md  AllReduceDistGradAggregator.h  BUILD-Windows.md  BlockMomentumDistributedLearner.h  BlockMomentumDistributedTrainer.h  BlockMomentumSGD.h  CMakeLists.txt  CNTK.CSharp.props  CNTK.Common.props  CNTK.Cpp.props  CNTK.sln  CNTK_wayne.sln  CONTRIBUTING.md  CppCntk.vssettings  LICENSE-README.md  LICENSE.md  Makefile  Makefile.cpu  Makefile.gpu  Makefile.ppc64  Makefile_kaldi.cpu  Makefile_kaldi.gpu  Makefile_kaldi2.cpu  Makefile_kaldi2.gpu  MatrixQuantizer.h  QuantizedDataParallelDistributedLearner.h  QuantizedDataParallelDistributedTrainer.h  QuantizedDistributedCommunicator.h  README  README.md  README.txt  (+27 more)
Source/Multiverso/: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
Source/Multiverso  @ 1431875/Test/unittests/: CMakeLists.txt  test_multiverso.cpp
Source/Multiverso  @ 1431875/src/: CMakeLists.txt  table_factory.cpp
Source/Multiverso @ 1431875/Applications/LogisticRegression/: .gitignore  CMakeLists.txt  LogisticRegression.vcxproj  README.md
Source/Multiverso @ 1431875/Applications/WordEmbedding/: CMakeLists.txt  WordEmbedding.vcxproj  WordEmbedding.vcxproj.filters
Source/Multiverso/Applications/LogisticRegression/: LogisticRegression.vcxproj.filters
Source/Multiverso/Applications/WordEmbedding/: README.md
Source/Multiverso/Test/: CMakeLists.txt  test_matrix_perf.cpp  test_matrix_table.cpp  test_net.cpp
Source/Multiverso/Test/unittests/: multiverso_env.h  test_blob.cpp  test_kv.cpp  test_message.cpp  test_node.cpp  test_sync.cpp
Source/Multiverso/binding/lua/: ArrayTableHandler.lua  CMakeLists.txt  README.md  init.lua  test.lua  util.lua
Source/Multiverso/binding/python/: README.md
Source/Multiverso/deploy/docker/: Dockerfile
Source/Multiverso/include/: .gitignore  comm.h  locksys.h  log.h  mt_queue.h  multiverso.h  row.h  server_base.h  table.h
Source/Multiverso/include/multiverso/: actor.h  blob.h  c_api.h  communicator.h  controller.h  dashboard.h  message.h  multiverso.h  net.h  node.h  server.h  table_factory.h  table_interface.h  worker.h  zoo.h
Source/Multiverso/src/: Multiverso.vcxproj.filters  actor.cpp  build_dll.bat  communicator.cpp  controller.cpp  dashboard.cpp  multiverso.cpp  net.cpp  server.cpp  table.cpp  timer.cpp  worker.cpp  zoo.cpp
Source/Multiverso/src/io/: hdfs_stream.cpp  io.cpp  local_stream.cpp
Source/Multiverso/src/net/: allreduce_engine.cpp  allreduce_topo.cpp  mpi_net.cpp
Source/Multiverso/src/table/: array_table.cpp  matrix_table.cpp
Source/Multiverso/src/util/: allocator.cpp  configure.cpp  log.cpp
Source/SparCML/libnbc/: .gitignore  CHANGELOG  LICENSE  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libnbc.la  nbc.c  nbc.h  nbc_fortran.c  nbc_iallgather.c  nbc_iallgatherv.c  nbc_iallreduce.c  nbc_ialltoall.c  nbc_ialltoallv.c  nbc_ibarrier.c  nbc_ibcast.c  nbc_ibcast_inter.c  nbc_icart_shift_xchg.c  nbc_igather.c  nbc_igatherv.c  nbc_ineighbor_allgather.c  nbc_ineighbor_allgatherv.c  nbc_ineighbor_alltoall.c  nbc_ineighbor_alltoallv.c  nbc_ineighbor_alltoallw.c  nbc_ineighbor_xchg.c  nbc_ineighbor_xchgv.c  nbc_internal.h  nbc_ireduce.c  nbc_ireduce_scatter.c  nbc_iscan.c  (+5 more)
Source/SparCML/libnbc/.libs/: libnbc.la  libnbc.lai
Source/SparCML/libnbc/config/: dcmf.m4  klm_sys_weak_alias.m4  mpi.m4  mpi22.m4  ofed.m4  ompi.m4  rt_thread.m4  thread.m4
Source/SparCML/libnbc/libdict/: Makefile.am  Makefile.in  dict.c  dict.h  dict_private.h  hb_tree.c  hb_tree.h  libdict.la
Source/SparCML/libnbc/of/: Makefile.am  Makefile.in  of.c  of.h  of_test.c
bindings/csharp/CNTKLibraryManagedDll/: CMakeLists.txt  CNTKLibraryManagedDll-CPUOnly-AssemblyInfo.cs  CNTKLibraryManagedDll-CPUOnly-KeyPair.snk  CNTKLibraryManagedDll-GPU-AssemblyInfo.cs  CNTKLibraryManagedDll-GPU-KeyPair.snk  CNTKLibraryManagedDll.csproj  FunctionExtensions.cs  Helper.cs  Utils.cs  ValueExtensions.cs  packages.config
bindings/csharp/CNTKLibraryManagedDll/HighLevelAPI/: Model.cs  Model2.cs  ModelExample.cs  TensorView.cs
bindings/csharp/CNTKLibraryManagedDll/Properties/: AssemblyInfo.cs
bindings/csharp/CNTKLibraryManagedDll/ShimApiClasses/: AxisShim.cs  CNTKLibShim.cs  ConstantShim.cs  DeviceDescriptorShim.cs  FunctionShim.cs  LearnerShim.cs  MinibatchSourceConfigShim.cs  MinibatchSourceShim.cs  NDArrayViewShim.cs  NDMaskShim.cs  NDShapeShim.cs  ParameterShim.cs  StreamConfigurationShim.cs  TrainerShim.cs  ValueShim.cs  VariableShim.cs
bindings/csharp/CNTKLibraryManagedDll/SwigProxyClasses/: README.md
bindings/csharp/Swig/: CMakeLists.txt  CNTKLibraryCSBinding.vcxproj  CNTKLibraryCSBinding.vcxproj.filters  CSharpBindings.vcxproj  CSharpBindings.vcxproj.filters  cntk_cs.i  std_unordered_map.i  std_unordered_set.i
support_tools/swigwin-3.0.12/CCache/: Makefile.in  README  README.swig  args.c  ccache.c  ccache.h  ccache.yo  ccache_swig_config.h.in  cleanup.c  config.h.in  configure  configure.ac  execute.c  hash.c  mdfour.c  mdfour.h  snprintf.c  stats.c  test.sh  unify.c  util.c
support_tools/swigwin-3.0.12/CCache/debian/: NEWS  README.Debian  changelog  control  copyright  dirs  examples  rules  update-ccache  watch
support_tools/swigwin-3.0.12/CCache/packaging/: README  ccache.spec
support_tools/swigwin-3.0.12/CCache/web/: index.html
support_tools/swigwin-3.0.12/Source/: Makefile.am  Makefile.in  README
support_tools/swigwin-3.0.12/Source/CParse/: cparse.h  cscanner.c  parser.c  parser.h  parser.y  templ.c  util.c
support_tools/swigwin-3.0.12/Source/DOH/: README  base.c  doh.h  dohint.h  file.c  fio.c  hash.c  list.c  memory.c  string.c  void.c
support_tools/swigwin-3.0.12/Source/Include/: swigconfig.h.in  swigwarn.h
support_tools/swigwin-3.0.12/Source/Modules/: README  allegrocl.cxx  allocate.cxx  browser.cxx  cffi.cxx  chicken.cxx  clisp.cxx  contract.cxx  csharp.cxx  d.cxx  directors.cxx  (+32 more)
(+11370 files in other folders)
